--- a/Schematic/changelog.txt
+++ b/Schematic/changelog.txt
@@ -4,3 +4,4 @@ v0.3: ESP8285 with flash + boot button, BME280 sensor, LIS331, TLS251T, benyt ch
 v0.4: Fjern: FTDI og BME280, 
 	tilføj: FTDI pins, lora module rfm95, bmp280, hdc1010
 	Der er internal pull-up/down på alle GPIO pins dermed fjernes pull-up/down fra GPIO pins. 
+v0.5: Decoupling caps for all components, LED 5050 1655, HDC1010, Silkscreen logo, M3 mount holes.
